objects/LAT_PromotionalAction__c.object
<CustomObject>
    <fields>
        <fullName>LAT_ActionKPI__c</fullName>
        <label>KPIs da ação</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LAT_ActionKPI</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_ActivationMaterial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material de Ativação</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_AmountOfColetas__c</fullName>
        <label>Amount of Coletas</label>
        <summaryForeignKey>LAT_DataCollect__c.Promotional_Action__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_AmountOfRegions__c</fullName>
        <label>Amount of regions</label>
        <summaryForeignKey>LAT_ClientByRegion__c.Promotional_Action__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_Booster__c</fullName>
        <label>Impulsionador</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distribução</fullName>
                </value>
                <value>
                    <fullName>Preço</fullName>
                </value>
                <value>
                    <fullName>Recomendação</fullName>
                </value>
                <value>
                    <fullName>Experiência</fullName>
                </value>
                <value>
                    <fullName>Visibilidade</fullName>
                </value>
                <value>
                    <fullName>Promoção</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_Brand__c</fullName>
        <label>Marca</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut Elyx</fullName>
                </value>
                <value>
                    <fullName>Absolut Flavours</fullName>
                </value>
                <value>
                    <fullName>Absolut Regular</fullName>
                </value>
                <value>
                    <fullName>Almaden</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s Finest</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s SP</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s 12Y</fullName>
                </value>
                <value>
                    <fullName>Beefeater</fullName>
                </value>
                <value>
                    <fullName>Chivas Extra</fullName>
                </value>
                <value>
                    <fullName>Chivas 12</fullName>
                </value>
                <value>
                    <fullName>Chivas 18/25</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Domecq</fullName>
                </value>
                <value>
                    <fullName>Glenlivet</fullName>
                </value>
                <value>
                    <fullName>Havana</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Malibu</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Mumm CR</fullName>
                </value>
                <value>
                    <fullName>Mumm Cuvee</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Olmeca</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Orloff Bold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Import</fullName>
                </value>
                <value>
                    <fullName>Other Local</fullName>
                </value>
                <value>
                    <fullName>Other Not Included</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BusinessCycle__c</fullName>
        <label>Ciclo Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>H1</fullName>
                </value>
                <value>
                    <fullName>H2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_CancelationReason__c</fullName>
        <label>Motivo de Cancelamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_CollectData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coletar Dados</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Description__c</fullName>
        <label>Descrição de ação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_EndDate__c</fullName>
        <label>Data de término</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_Mecanica2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Se a Mecânica for padrão, não informar nada neste campo.</inlineHelpText>
        <label>Mecânica</label>
        <referenceTo>LAT_Mecanica__c</referenceTo>
        <relationshipLabel>Ações Promocionais</relationshipLabel>
        <relationshipName>A_es_Promocionais_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Mecanica__c</fullName>
        <label>Mecânica</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Objetive__c</fullName>
        <label>Objetivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROS</fullName>
                </value>
                <value>
                    <fullName>SellOut</fullName>
                </value>
                <value>
                    <fullName>Market Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_PromotionalPack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pack Promocional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Quantidade_de_Clientes__c</fullName>
        <label>Quantidade de Clientes</label>
        <summaryFilterItems>
            <field>LAT_AccountInAction__c.LAT_Status__c</field>
            <operation>notEqual</operation>
            <value>Ação não aprovada pelo cliente</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LAT_AccountInAction__c.LAT_Status__c</field>
            <operation>notEqual</operation>
            <value>Cliente não aprovado</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LAT_AccountInAction__c.LAT_Status__c</field>
            <operation>notEqual</operation>
            <value>Cliente não previsto</value>
        </summaryFilterItems>
        <summaryForeignKey>LAT_AccountInAction__c.LAT_PromotionalAction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LAT_StartDate__c</fullName>
        <label>Data de início</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ação registrada no sistema</fullName>
                    <default>true</default>
                    <label>Ação registrada no sistema</label>
                </value>
                <value>
                    <fullName>Ação encaminhada a aprovação</fullName>
                </value>
                <value>
                    <fullName>Ação cancelada</fullName>
                </value>
                <value>
                    <fullName>Ação não aprovada</fullName>
                </value>
                <value>
                    <fullName>Ação aprovada</fullName>
                </value>
                <value>
                    <fullName>Ação iniciada</fullName>
                </value>
                <value>
                    <fullName>Ação Finalizada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ação Promocional</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAT_StartDate__c</columns>
        <columns>LAT_EndDate__c</columns>
        <columns>LAT_BusinessCycle__c</columns>
        <columns>LAT_Booster__c</columns>
        <columns>LAT_Mecanica__c</columns>
        <columns>LAT_status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Ação Promocional</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ações Promocionais</pluralLabel>
    <recordTypes>
        <fullName>Aprovada</fullName>
        <active>true</active>
        <label>Aprovada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Iniciada</fullName>
        <active>true</active>
        <label>Iniciada</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Cancelada</fullName>
        <active>true</active>
        <label>Cancelada</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_Finalizada</fullName>
        <active>true</active>
        <label>Finalizada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registrada_no_sistema</fullName>
        <active>true</active>
        <label>Registrada no sistema</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>